kubespray/hj/env-local/k8s/core/backend/core-admin-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: admin-api
    namespace: core
spec:
    replicas: 1
    selector:
        matchLabels:
            app: admin-api
    template:
        metadata:
            labels:
                app: admin-api
        spec:
            containers:
                - name: admin-api
                  image: k3d-local-registry:5001/ticketing-admin:latest # 개인의 환경에 맞게 설정
                  imagePullPolicy: Always
                  ports:
                      - containerPort: 8081
