kubespray/hj/env-local/k8s/core/backend/core-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: core-api
    namespace: core
spec:
    replicas: 2
    selector:
        matchLabels:
            app: core-api
    template:
        metadata:
            labels:
                app: core-api
        spec:
            containers:
                - name: core-api
                  image: k3d-local-registry:5001/ticketing-api:latest # 개인의 환경에 맞게 설정 (Docker build/push 기준)
                  imagePullPolicy: Always
                  ports:
                      - containerPort: 8082
