kubespray/hj/env-local/k8s/core/backend/core-admin-service.yaml
apiVersion: v1
kind: Service
metadata:
    name: admin-api
    namespace: core
spec:
    type: ClusterIP
    selector:
        app: admin-api
    ports:
        - name: http
          port: 8081
          targetPort: 8081
