kubespray/hj/env-local/k8s/core/backend/core-service.yaml
apiVersion: v1
kind: Service
metadata:
    name: core-api
    namespace: core
spec:
    type: ClusterIP
    selector:
        app: core-api
    ports:
        - name: http
          port: 8082
          targetPort: 8082
