kubespray/hj/env-local/k8s/core/backend/core-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: core-api-ingress
    namespace: core
    annotations:
        nginx.ingress.kubernetes.io/proxy-body-size: '10m'
spec:
    ingressClassName: nginx
    tls:
        - hosts:
              - local.api.ddcn41.com
          secretName: ddcn41-tls
    rules:
        - host: local.api.ddcn41.com
          http:
              paths:
                  # /v1/admin → admin-api
                  - path: /v1/admin
                    pathType: Prefix
                    backend:
                        service:
                            name: admin-api
                            port:
                                number: 8081

                  # /v1/** → core-api
                  - path: /v1/
                    pathType: Prefix
                    backend:
                        service:
                            name: core-api
                            port:
                                number: 8082

                  # / → core-api
                  - path: /
                    pathType: Prefix
                    backend:
                        service:
                            name: core-api
                            port:
                                number: 8082
